--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boolflix</title>
+    <style>
+
+      ::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+      }
+
+      ::-webkit-scrollbar-track {
+        -webkit-box-shadow:inset 0px 6px 6px rgba(0,0,0,0.3);
+        border-radius: 8px;
+        background-color: #F5F5F5;
+      }
+
+      ::-webkit-scrollbar-thumb {
+        background: #5c5c5c; 
+        border-radius: 8px;
+      }
+      
+      ::-webkit-scrollbar-thumb:hover {
+        background: #2e2e2e; 
+      }
+      </style>
   </head>
   <body>
     <div id="app"></div>
